tests/neg/todo/unions/union-05.ts
function noop(u) {}

/*@ foo :: (u:boolean + null) => {number | 0 < 1} */
function foo(u) {
  noop(u); 
  return "not a number"; // UNSAFE
}
